--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -33,7 +33,7 @@
             <tr>
               <td><%= id %></td>
               <td><%= urls[id] %></td>
-              <td><form method="POST" action="/urls/9sm5xK/delete"><button type="submit">Delete</button></form>
+              <td><form method="POST" action="/urls/<%= id %>/delete"><button type="submit">Delete</button></form>
               </td>
             </tr>
           <% } %>
