--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -21,7 +21,13 @@
           Short URL ID: <a href="/u/<%= id %>"><%= id %></a>
         </p>
       </div>
-      <div class="card-footer text-muted"></div>
+      <div class="card-footer text-muted">
+        <h4>Edit</h4>
+        <form method="POST" action="/urls/<%= id %>/edit">
+          <label for="editURL">New URL: </label> <input type="text" id="editURL" name="editURL" placeholder="<%= longURL %>" />
+          <button type="submit" class = "btn btn-primary">Submit</button>
+        </form>
+      </div>
     </div>
     <!-- Bootstrap JS -->
     <script
