updates longURL and persists on /url path afterward

--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -23,7 +23,7 @@
       </div>
       <div class="card-footer text-muted">
         <h4>Edit</h4>
-        <form method="POST" action="/urls/<%= id %>/edit">
+        <form method="POST" action="/urls/<%= id %>">
           <label for="editURL">New URL: </label> <input type="text" id="editURL" name="editURL" placeholder="<%= longURL %>" />
           <button type="submit" class = "btn btn-primary">Submit</button>
         </form>
