--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -34,9 +34,17 @@
             <tr>
               <td><%= id %></td>
               <td><%= urls[id] %></td>
-              <td><form method="POST" action="/urls/<%= id %>/edit"><button type="submit" class = "btn btn-outline-primary">Edit</button></form>
+              <td>
+                <form method="GET" action="/urls/<%= id %>">
+                  <a href="/urls/<%= id %>">
+                    <button type="submit" class = "btn btn-outline-primary">Edit</button>
+                  </a>
+                </form>
               </td>
-              <td><form method="POST" action="/urls/<%= id %>/delete"><button type="submit" class = "btn btn-outline-danger">Delete</button></form>
+              <td>
+                <form method="POST" action="/urls/<%= id %>/delete">
+                  <button type="submit" class = "btn btn-outline-danger">Delete</button>
+                </form>
               </td>
             </tr>
           <% } %>
