--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -18,5 +18,9 @@
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
     </div>
+    <form method="POST" action="/login">
+      <label for="username"></label> <input type="text" id="username" name="username" placeholder="Username" />
+      <button type="submit" class = "btn btn-outline-dark">Login</button>
+    </form>
   </nav>
 </header>
