--- a/views/register.ejs
+++ b/views/register.ejs
@@ -14,16 +14,26 @@
   <body>
     
     <!-- Extremely basic registration form, will improve later -->
-    <h2>Registration Form</h2>
-    <form method="POST" action="/register" >
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required><br><br>
+    <div class="container">
+      <div class="row justify-content-center mt-5">
+          <div class="col-md-6">
+              <h2 class="text-center">Registration Form</h2>
+              <form method="POST" action="/register" >
+                  <div class="form-group">
+                      <label for="email">Email:</label>
+                      <input type="email" class="form-control" id="email" name="email" required>
+                  </div>
 
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="password" required><br><br>
+                  <div class="form-group">
+                      <label for="password">Password:</label>
+                      <input type="password" class="form-control" id="password" name="password" required>
+                  </div>
 
-        <input type="submit" value="Register">
-    </form>
+                  <button type="submit" class="btn btn-primary">Register</button>
+                </form>
+            </div>
+        </div>
+    </div>
 
     <!-- Bootstrap JS -->
     <script
