--- a/views/register.ejs
+++ b/views/register.ejs
@@ -15,7 +15,7 @@
     
     <!-- Extremely basic registration form, will improve later -->
     <div class="container">
-      <div class="row justify-content-center mt-5">
+      <section class="row justify-content-center mt-5">
           <div class="col-md-6">
               <h2 class="text-center">Registration Form</h2>
               <form method="POST" action="/register" >
@@ -32,7 +32,7 @@
                   <button type="submit" class="btn btn-primary">Register</button>
                 </form>
             </div>
-        </div>
+       </section>
     </div>
 
     <!-- Bootstrap JS -->
