attempt of using user.email instead of username, need to fix

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -18,17 +18,18 @@
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
     </div>
-      <% if (username) { %>
+    <% console.log(user) %>
+      <% if (user) { %>
         <form method="POST" action="/logout">
-          <label for="username"></label>
-          <h6>Logged in as: <%= username %>!  
+          <label for="email"></label>
+          <h6>Logged in as: <%= user.email %>!  
             <button type="submit" class = "btn btn-outline-dark">Logout</button>
           </h6>
         </form>
       <% } else { %>
         <form method="POST" action="/login">
-          <label for="username"></label>
-          <input type="text" id="username" name="username" placeholder="Username" />
+          <label for="email"></label>
+          <input type="text" id="email" name="email" placeholder="Email" />
           <button type="submit" class = "btn btn-outline-dark">Login</button>
         </form>
       <% } %>
