finished /register route, working on POST /login

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -8,7 +8,7 @@
       integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
       crossorigin="anonymous"
     />
-    <title>Register For New Account</title>
+    <title>Login To Your Account</title>
   </head>
 
   <body>
@@ -17,8 +17,8 @@
     <div class="container">
       <section class="row justify-content-center mt-5">
           <div class="col-md-6">
-              <h2 class="text-center">Registration Form</h2>
-              <form method="POST" action="/register" >
+              <h2 class="text-center">Login Form</h2>
+              <form method="POST" action="/login" >
                   <div class="form-group">
                       <label for="email">Email:</label>
                       <input type="email" class="form-control" id="email" name="email" required>
@@ -29,7 +29,7 @@
                       <input type="password" class="form-control" id="password" name="password" required>
                   </div>
 
-                  <button type="submit" class="btn btn-primary">Register</button>
+                  <button type="submit" class="btn btn-primary">Login</button>
                 </form>
             </div>
        </section>
