--- a/views/register.ejs
+++ b/views/register.ejs
@@ -17,7 +17,7 @@
     <div class="container">
       <section class="row justify-content-center mt-5">
           <div class="col-md-6">
-              <h2 class="text-center">Registration Form</h2>
+              <h2 class="text-center">Create Account</h2>
               <form method="POST" action="/register" >
                   <div class="form-group">
                       <label for="email">Email:</label>
