add _header partial to /login and /register pages too for consistency, refactored code

--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -24,7 +24,7 @@
       <div class="card-footer text-muted">
         <h4>Edit</h4>
         <form method="POST" action="/urls/<%= id %>">
-          <label for="editURL">New URL: </label> <input type="text" id="editURL" name="editURL" placeholder="<%= longURL %>" />
+          <label for="editURL">New URL: </label> <input type="text" id="editURL" name="editURL" value="<%= longURL %>" />
           <button type="submit" class = "btn btn-primary">Submit</button>
         </form>
       </div>
