--- a/views/login.ejs
+++ b/views/login.ejs
@@ -12,8 +12,7 @@
   </head>
 
   <body>
-    
-    <!-- Extremely basic registration form, will improve later -->
+    <%- include('partials/_header') %>
     <div class="container">
       <section class="row justify-content-center mt-5">
           <div class="col-md-6">
@@ -21,12 +20,12 @@
               <form method="POST" action="/login" >
                   <div class="form-group">
                       <label for="email">Email:</label>
-                      <input type="email" class="form-control" id="email" name="email" required>
+                      <input type="email" class="form-control" id="email" name="email">
                   </div>
 
                   <div class="form-group">
                       <label for="password">Password:</label>
-                      <input type="password" class="form-control" id="password" name="password" required>
+                      <input type="password" class="form-control" id="password" name="password">
                   </div>
 
                   <button type="submit" class="btn btn-primary">Login</button>
